test/cases/x86_64-windows/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-windows
//
// :130:9: error: root struct of file 'tmp' has no member named 'main'
